--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/buen.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>ElBuenSabor</title>
+    <script src="https://cdn.tiny.cloud/1/t0iakf28mn6s6e89exscg5r1vj9jy3d3om1z4x5y4nh9ve0y/tinymce/7/tinymce.min.js" referrerpolicy="origin"></script>
   </head>
   <body>
     <div id="root"></div>
