Arreglamos lo mismo quevenimos haciendo hace 1 semana. Categorias y Articulos Manufacturados

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="https://cdn.tiny.cloud/1/t0iakf28mn6s6e89exscg5r1vj9jy3d3om1z4x5y4nh9ve0y/tinymce/7/tinymce.min.js" referrerpolicy="origin"></script>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" class="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
