--- a/index.html
+++ b/index.html
@@ -6,9 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ElBuenSabor</title>
     <script src="https://cdn.tiny.cloud/1/t0iakf28mn6s6e89exscg5r1vj9jy3d3om1z4x5y4nh9ve0y/tinymce/7/tinymce.min.js" referrerpolicy="origin"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
   </head>
   <body>
-    <div id="root" class="root"></div>
+    <div id="root" ></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
